--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
         </table>
                     
         <form action="/">
-            <input type="submit" value="Cerrar sesión"/>
+            <button type="submit">Actualizar datos</button>
         </form>
     </body>
 </html>
