añadir productos y ver productos

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>ESTE ES EL PANEL DE ADMINISTRADOR</h1>
-        <table class="default" id="tableUsers">
+        <table class="default" id="tableUsers" border="10">
             <tr>
                 <th>Id</th>
                 <th>Nombre de usuario</th>
@@ -15,7 +15,9 @@
                 <th>Contraseña</th>
                 <th>estado</th>
                 <th>cambiar estado</th>
-            </tr>           
+                <td> </td>
+            </tr>   
+            <img src="" width="" height="" alt="">        
         </table>
                     
         <form action="/">
