boostrap? pero solo en ruta /

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>ESTE ES EL PANEL DE ADMINISTRADOR</h1>
-        <table class="default" id="tableUsers" border="10">
+        <table class="default" id="tableUsers" border="10" style="display: block;">
             <tr>
                 <th>Id</th>
                 <th>Nombre de usuario</th>
@@ -17,7 +17,7 @@
                 <th>cambiar estado</th>
                 <td> </td>
             </tr>   
-            <button onclick=""></button>
+            <button a></button>
             <img src="" width="" height="" alt="">        
         </table>
                     
